# rosidl_opendds_adapter

./: CMakeLists.txt  README.md  package.xml  rosidl_opendds_adapter-extras.cmake  setup.cfg  setup.py
cmake/: rosidl_adapt_interfaces.cmake
rosidl_opendds_adapter/: __main__.py  cli.py  main.py
rosidl_opendds_adapter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
rosidl_opendds_adapter/action/: __init__.py
rosidl_opendds_adapter/msg/: __init__.py
rosidl_opendds_adapter/resource/: __init__.py  action.idl.em  msg.idl.em  srv.idl.em  struct.idl.em
rosidl_opendds_adapter/srv/: __init__.py
rosidl_opendds_adapter/typedef/: __init__.py
scripts/: msg2idl.py  srv2idl.py
test/data/action/: Test.action
