<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosidl_opendds_adapter</name>
  <version>0.0.0</version>
  <description>ros2 messages converter to OpenDDS .idl based on 'rosidl_adapter'.</description>
  <maintainer email="jaehyeok718@wavem.net">antique</maintainer>
  <license>Apache-2.0</license>
  
  <buildtool_export_depend>ament_cmake_core</buildtool_export_depend>
  <buildtool_export_depend>python3</buildtool_export_depend>

  <build_depend>ament_cmake</build_depend>

  <exec_depend>python3-empy</exec_depend>
  <exec_depend>rosidl_cli</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
